Bug 61911: typeof(/regExp/) should return "object", not "function", patch by Brian Crowder <crowder@fiverocks.com>, r=brendan